--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
       <nav>
         {{#if logged_in}}
         <a href="/dashboard">Dashboard</a> |
-        <button class="no-button" id="logout">logout</button>
+        <button class="no-button" id="logout">Logout</button>
         {{else}}
         <a href="/login">Login</a>
         {{/if}}
