--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 {{#each posts as |post|}}
 <div>
     <h2>
-        <a href="/post/{{post.id}}">{{post.title}} by {{post.user.name}}</a>
+        <a href="/post/{{post.id}}">{{post.title}} by {{post.user.name}} {{format_date}}</a>
     </h2>
     <p>
         {{post.content}}
